test/files/neg/t2866.check
t2866.scala:30: warning: imported `one' is permanently hidden by definition of value one
    import A.one // warning: imported `one' is permanently hidden by definition of value one.
             ^
t2866.scala:42: error: ambiguous implicit values:
 both value two of type Int
 and value one in object A of type => Int
 match expected type Int
    assert(implicitly[Int] == 2) // !!! Not ambiguous in 2.8.0. Ambiguous in 2.7.6
                     ^
t2866.scala:50: error: ambiguous implicit values:
 both value two of type Int
 and value one in object A of type => Int
 match expected type Int
    assert(implicitly[Int] == 2) // !!! Not ambiguous in 2.8.0. Ambiguous in 2.7.6
                     ^
one warning found
two errors found
